--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <i class="fa fa-plus"></i>
         </button>
     </div>
-    <script src="js/script.js"></script>
+    <script src="https://HiroyukiKanemaru.github.io/training/js/script.js"></script>
 </body>
 
 </html>
